--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First Ever Github Repo </title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-   <h1> My first Github</h1> 
+    <div>
+   <h3> My first Github</h3> 
    <p>website coming soon</p>
    <p>new updates</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
+</div>
 </body>
 </html>
