added the second third and forth bblog

--- a/index.html
+++ b/index.html
@@ -8,10 +8,28 @@
 </head>
 <body>
     <div>
-   <h3> My first Github</h3> 
+   <h3> My First Website</h3 > 
    <p>website coming soon</p>
    <p>new updates</p>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
 </div>
+<div>
+    <h3> My Second Blog</h3 > 
+    <p>website coming soon</p>
+    <p>new updates</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
+ </div>
+ <div>
+    <h3> My Third Blog</h3 > 
+    <p>website coming soon</p>
+    <p>new updates</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
+ </div>
+ <div>
+    <h3> My Forth Blog</h3 > 
+    <p>website coming soon</p>
+    <p>new updates</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
+ </div>
 </body>
 </html>
