--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
     <p>new updates</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eligendi voluptatem, ratione fuga dolor itaque atque, voluptatum sint soluta autem magni recusandae reprehenderit, vero ipsam. Dignissimos maiores ipsa similique mollitia.</p>
  </div>
+ <div>
+    <h3>how to push incremental code</h3>
+    <ol>
+        <li>git add .</li>
+        <li>git commit -m""</li>
+        <li>git push</li>
+    </ol>
+ </div>
 </body>
 </html>
