--- a/index.html
+++ b/index.html
@@ -39,5 +39,10 @@
         <li>git push</li>
     </ol>
  </div>
+ <div>
+    <h3>Photoshoot in Gothenburg</h3>
+    <img src="images/Rabi.jpg" alt="">
+    
+ </div>
 </body>
 </html>
