--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
  </div>
  <div>
     <h3>Photoshoot in Gothenburg</h3>
-    <img src="images/Rabi.jpg" alt="">
+    <img width="400px" src="images/Rabi.jpg" alt="">
     
  </div>
 </body>
